# coreVIEWERcsvReader

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: 1-01107_2025-10-24_16-14-56.csv
src/coreviewercsvreader/: __init__.py  core_viewer_csv_reader.py  main.py
tests/: test_core_viewer_csv_reader.py  test_core_viewer_csv_reader_values.py  test_smoke.py
tests/testdata/: 1-01107_2025-10-24_16-14-56.csv  1-01107_2025-10-24_16-14-56_eu.csv
