# pyproject.toml
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "coreviewercsvreader"
version = "0.1.0"
description = "Read coreSensing CSV files into pandas DataFrames"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Arthur Buchta" }]
dependencies = ["pandas>=2.0"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/coreViolett/coreVIEWERcsvReader"
Issues = "https://github.com/coreViolett/coreVIEWERcsvReader/issues"

[project.scripts]
corecsv = "coreviewercsvreader.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/coreviewercsvreader"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]
