# pyproject.toml
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "coreviewercsvreader"
version = "0.2.2"
description = "Read coreSensing CSV files into pandas DataFrames"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Arthur Buchta" }]
dependencies = [
  "pandas>=2.0",
  "flake8 (>=7.3.0,<8.0.0)",
  "pytest (>=8.4.2,<9.0.0)",
]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/coreViolett/coreVIEWERcsvReader"
Issues = "https://github.com/coreViolett/coreVIEWERcsvReader/issues"

[project.scripts]
corecsv = "coreviewercsvreader.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/coreviewercsvreader"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.poetry]
name = "coreviewercsvreader"
version = "0.2.2"
description = "Read coreSensing CSV files into pandas DataFrames"
readme = "README.md"
authors = ["Arthur Buchta"]
license = "MIT"
packages = [
  { include = "coreviewercsvreader", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9"
pandas = ">=2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
flake8 = "^7.3.0"
